# MVP_Acupuntura

./: .gitignore  README.md  docker-compose.yml  main.py  plano_mvp_acupuntura.html  pyproject.toml  requirements.txt  teste_nova_formatacao.py
db/: init.sql
mvp_acupuntura/gui/: tela_inicial.py
mvp_acupuntura/setup_audio/: rec_audio.py
mvp_acupuntura/tools/: setup_folders.py  tools_system.py  transcricao.py  transcricao_simples.py  transcricao_whisperx.py
src/gui/: loading_screen.py  questionario.py  tela_inicial.py
src/models/: perguntas_estruturadas.json  perguntas_estruturadas_20250805.json  perguntas_estruturadas_llm.json
src/setup_audio/: preprocessador_audio.py  rec_audio.py
src/tools/: ia_preenche_forms.py  logging_config.py  postgres_connection.py  redis_connection.py  setup_folders.py  tools_system.py  transcricao.py  transcricao_whisperx.py
test/: teste_busca_completo.py  teste_estrutura_whisperx.py  teste_gravacao.py  teste_transcricao_simples.py
